<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Введіть слово і ми перевіримо чи воно паліндром</string>
    <string name="et_word_hint">Введіть слово</string>
    <string name="bt_label_is_palindrome">паліндром?</string>
    <string name="yes">ТАК</string>
    <string name="no">НІ</string>
    <string name="info">Info</string>
    <string name="button_label">Button label</string>
    <string name="take_photo">Take photo</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">Sign Up</string>
    <string name="anon">Anonymously</string>
    <string name="or_sign_in">Or Sign In</string>
    <string name="e_mail_sign_in">Sign In by Email</string>
    <string name="google">Google</string>
    <string name="no_camera_permission_granted">No Camera Permission granted</string>
    <string name="not_implemented">Not implemented</string>
    <string name="ok">OK</string>
    <string name="app_info">This is a sample information about this application named UKD Dummy App. This app is written using java. This application can check if word is a palindrome and take a camera photo. Wow! Cool, isn\'t it?</string>
    <string name="save_photo">Save photo</string>
    <string name="dialog_permission_camera_message">In order to make photo you must grant permission to use camera</string>
    <string name="dialog_camera_permission_title">Camera Permission</string>
    <string name="open_settings">Open Settings</string>
    <string name="email">Email:</string>
    <string name="network_api_error">Network/API error</string>
    <string name="something_went_wrong">Something went wrong - please try again later</string>


</resources>