<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="ua.ukd.dummy.MainActivity">

    <EditText
        android:id="@+id/etText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_word_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editControls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etText"
        tools:visibility="visible">

        <!--        <androidx.constraintlayout.widget.Guideline-->
        <!--            android:id="@+id/hc"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical"-->
        <!--            app:layout_constraintGuide_percent="0.5" />-->

        <ImageButton
            android:id="@+id/btCheck"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:padding="12dp"
            android:src="@drawable/ic_launcher_foreground"
            android:text="@string/bt_label_is_palindrome"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="@+id/btInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btInfo" />

        <Button
            android:id="@+id/btInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            app:layout_constraintStart_toEndOf="@+id/btCheck"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <LinearLayout-->
<!--            android:id="@+id/llButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/btCheck">-->

<!--            <ImageView-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:layout_width="48dp"-->
<!--                android:layout_height="48dp"-->
<!--                android:src="@drawable/ic_camera" />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="12dp"-->
<!--                android:text="@string/take_photo" />-->
<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/btCam"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:text="@string/take_photo"
            app:drawableStartCompat="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@+id/btInfo"
            app:layout_constraintStart_toEndOf="@+id/btInfo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/hello_world"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editControls"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="12dp"
        android:text="@string/info"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/swSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="CheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swSwitch" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="wrap_content"
        android:layout_height="256dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:soundEffectsEnabled="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
